# llm-ekg

./: .gitignore  LICENSE  README.md  demo.py  demo_model_swap.ipynb  pyproject.toml
llm_ekg/: __init__.py  __main__.py  engine.py  report.py  security.py
paper/: behavioral_audit_paper.tex  llm_ekg_paper.tex  run_audit.py
paper/audit_data/: claude-haiku.json  claude-sonnet.json  gemini-2.0-flash.json  gpt-3.5-turbo.json  gpt-4.1-mini.json  gpt-4o-mini.json  grok-3-mini.json  grok-3.json  results_summary.json  tamper_claude-haiku_brevity.json  tamper_claude-haiku_format.json  tamper_claude-haiku_hedging.json  tamper_gpt-4o-mini_brevity.json  tamper_gpt-4o-mini_format.json  tamper_gpt-4o-mini_hedging.json  tamper_grok-3_brevity.json  tamper_grok-3_format.json  tamper_grok-3_hedging.json  tampering_results.json  temp_gpt-4o-mini_0.2.json  temp_gpt-4o-mini_0.7.json  temp_gpt-4o-mini_1.2.json  temperature_results.json
paper/audit_data/baselines/: claude-haiku.json  claude-sonnet.json  gemini-2.0-flash.json  gpt-3.5-turbo.json  gpt-4.1-mini.json  gpt-4o-mini.json  grok-3-mini.json  grok-3.json  tamper_claude-haiku_brevity.json  tamper_claude-haiku_format.json  tamper_claude-haiku_hedging.json  tamper_gpt-4o-mini_brevity.json  tamper_gpt-4o-mini_format.json  tamper_gpt-4o-mini_hedging.json  tamper_grok-3_brevity.json  tamper_grok-3_format.json  tamper_grok-3_hedging.json  temp_gpt-4o-mini_0.2.json  (+2 more)
paper/tables/: table1_fingerprints.tex  table2_detectability.tex  table3_tampering.tex  table4_temperature.tex
tests/: test_engine.py  test_security.py
(+67 files in other folders)
