[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-ekg"
version = "1.0.0"
description = "Mathematical health monitor for LLMs — detect degradation and hallucination without NLP"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Carmen Esteban", email = "carmen@iafiscal.es"},
]
keywords = [
    "llm", "monitoring", "health", "degradation", "hallucination",
    "mathematical-analysis", "signal-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
all = ["openai>=1.0", "anthropic>=0.20"]

[project.urls]
Homepage = "https://github.com/iafiscal1212/llm-ekg"
Issues = "https://github.com/iafiscal1212/llm-ekg/issues"

[project.scripts]
llm-ekg = "llm_ekg.__main__:main"

[tool.setuptools.packages.find]
include = ["llm_ekg*"]
